--- a/AnsibleFiles/ssh_keygen.yml
+++ b/AnsibleFiles/ssh_keygen.yml
@@ -1,8 +1,8 @@
 
 ---
-- hosts: all
+- hosts: main
   tasks:
-    - name: ensure SSH key is generated
+    - name: Generate SSH Key
       command: ssh-keygen -t rsa -f /root/.ssh/id_rsa -N ''
       args:
         creates: /root/.ssh/id_rsa
