--- a/AnsibleFiles/ssh_keygen.yml
+++ b/AnsibleFiles/ssh_keygen.yml
@@ -3,6 +3,6 @@
 - hosts: main
   tasks:
     - name: Generate SSH Key
-      command: ssh-keygen -t rsa -f /root/.ssh/id_rsa -N ''
+      command: ssh-keygen -N '' -f /root/.ssh/id_rsa
       args:
         creates: /root/.ssh/id_rsa
