--- a/AnsibleFiles/install_jdk8.yml
+++ b/AnsibleFiles/install_jdk8.yml
@@ -10,11 +10,11 @@
 
 
   tasks:
-  - name: Download Java
-    command: "get_url -q -O {{java_archive}} --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{download_url}} creates={{java_archive}}"
+ # - name: Download Java
+ #   command: "get_url -q -O {{java_archive}} --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{download_url}} creates={{java_archive}}"
 
   - name: Unpack archive
-    command: "tar -zxf {{java_archive}} -C {{download_folder}} creates={{java_name}}"
+    command: "tar -xvf {{java_archive}} -C {{download_folder}} creates={{java_name}}"
 
   - name: Fix ownership
     file: state=directory path={{java_name}} owner=root group=root recurse=yes
