--- a/AnsibleFiles/install_jdk8.yml
+++ b/AnsibleFiles/install_jdk8.yml
@@ -5,8 +5,8 @@
   vars:
     download_url: http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-x64.tar.gz
     download_folder: /opt
-    java_name: "{{download_folder}}/jdk1.8.0_05"
-    java_archive: "{{download_folder}}/jdk-8u5-linux-x64.tar.gz"
+    java_name: "{{download_folder}}/jdk1.8_172/"
+    java_archive: "{{download_folder}}/jdk-8u172-linux-i586.tar.gz"
 
 
   tasks:
@@ -22,5 +22,5 @@
   - name: Make Java available for system
     command: 'alternatives --install "/usr/bin/java" "java" "{{java_name}}/bin/java" 2000'
 
-  - name: Clean up
-    file: state=absent path={{java_archive}}
+ # - name: Clean up
+ #  file: state=absent path={{java_archive}}
