--- a/AnsibleFiles/install_jdk8.yml
+++ b/AnsibleFiles/install_jdk8.yml
@@ -5,8 +5,9 @@
   vars:
     download_url: http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-x64.tar.gz
     download_folder: /opt
-    java_name: "{{download_folder}}/jdk1.8_172/"
+    java_name: "{{download_folder}}/jdk1.8_172"
     java_archive: "{{download_folder}}/jdk-8u172-linux-i586.tar.gz"
+    java_env_file: "/etc/profile.d/java.sh"
 
 
   tasks:
@@ -21,6 +22,12 @@
 
   - name: Make Java available for system
     command: 'alternatives --install "/usr/bin/java" "java" "{{java_name}}/bin/java" 2000'
-
+    
+  - name: Set/Configure JAVA_HOME in environment variables 
+    shell: "echo 'export JAVA_HOME={{java_name}}\n export PATH=$JAVA_HOME/bin:$PATH' > {{java_env_file}}"
+    
+  - name: Exports/Run java env file for make JAVA_HOME available globally
+    shell: "source {{java_env_file}}"
+  
  # - name: Clean up
  #  file: state=absent path={{java_archive}}
