--- a/AnsibleFiles/install_jdk8.yml
+++ b/AnsibleFiles/install_jdk8.yml
@@ -5,7 +5,7 @@
   vars:
     download_url: http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-x64.tar.gz
     download_folder: /opt
-    java_name: "{{download_folder}}/jdk1.8_172"
+    java_name: "{{download_folder}}/jdk1.8_172/"
     java_archive: "{{download_folder}}/jdk-8u172-linux-i586.tar.gz"
     java_env_file: "/etc/profile.d/java.sh"
 
@@ -15,13 +15,13 @@
  #   command: "get_url -q -O {{java_archive}} --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{download_url}} creates={{java_archive}}"
 
   - name: Unpack archive
-    command: "tar -xvf {{java_archive}} -C {{download_folder}} creates={{java_name}}"
+    command: "tar -xvf {{java_archive}} -C {{download_folder}}"
 
   - name: Fix ownership
     file: state=directory path={{java_name}} owner=root group=root recurse=yes
 
   - name: Make Java available for system
-    command: 'alternatives --install "/usr/bin/java" "java" "{{java_name}}/bin/java" 2000'
+    command: 'update-alternatives --install "/usr/bin/java" "java" "{{java_name}}bin/java" 2000'
     
   - name: Set/Configure JAVA_HOME in environment variables 
     shell: "echo 'export JAVA_HOME={{java_name}}\n export PATH=$JAVA_HOME/bin:$PATH' > {{java_env_file}}"
