--- a/AmbariInstallation/cluster_configuration.json
+++ b/AmbariInstallation/cluster_configuration.json
@@ -49,7 +49,6 @@
   "Blueprints" : {
     "blueprint_name" : "multi-node-hdfs-yarn",
     "stack_name" : "HDP",
-    "stack_version" : "2.6",
-    "repository_version": "2.6.3.0-292"
+    "stack_version" : "2.6"
   }
 }
