--- a/AmbariInstallation/cluster_configuration.json
+++ b/AmbariInstallation/cluster_configuration.json
@@ -17,7 +17,10 @@
         },
         {
           "name" : "ZOOKEEPER_SERVER"
-        }
+        }, 
+	{
+	  "name": "APP_TIMELINE_SERVER"
+ 	}
       ],
       "cardinality" : "1"
     },
