--- a/AmbariInstallation/cluster_configuration.json
+++ b/AmbariInstallation/cluster_configuration.json
@@ -50,7 +50,7 @@
     }
   ],
   "Blueprints" : {
-    "blueprint_name" : "multi-node-hdfs-yarn",
+    "blueprint_name" : "G101",
     "stack_name" : "HDP",
     "stack_version" : "2.6"
   }
