--- a/AmbariInstallation/cluster_configuration.json
+++ b/AmbariInstallation/cluster_configuration.json
@@ -50,7 +50,7 @@
     }
   ],
   "Blueprints" : {
-    "blueprint_name" : "G101_Blueprint",
+    "blueprint_name" : "G101_Blueprint_new",
     "stack_name" : "HDP",
     "stack_version" : "2.6"
   }
