--- a/AmbariInstallation/hostmapping.json
+++ b/AmbariInstallation/hostmapping.json
@@ -1,6 +1,7 @@
 {
 "blueprint" : "G101",
 "repository_version": "2.6.5.0-292",  
+"repository_version_id": 1,
 "default_password" : "hadoop",
 "host_groups" :[
   {
