--- a/AnsibleFiles/roles/installpackages/tasks/main.yml
+++ b/AnsibleFiles/roles/installpackages/tasks/main.yml
@@ -3,13 +3,13 @@
 - name: Add the OS specific varibles
   include_vars: "{{ ansible_os_family }}.yml"
  
-- name: Install the openldap and required Packages for RedHat
+- name: Install required Packages for RedHat
   yum: name={{ item }} state=installed
   with_items: "{{packages}}"
   when: ansible_os_family == 'RedHat'
 
 
-- name: Install the openldap and required Packages for Ubuntu
+- name: Install required Packages for Ubuntu
   apt: name={{ item }} state=installed update_cache=yes
   with_items: "{{packages}}"
   environment: env
